// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`Elements Sidebar renders a SidebarLink correctly. 1`] = `
<Styled(Component)
  to="#"
>
  Test
</Styled(Component)>
`;

exports[`Elements Sidebar renders a SidebarLinkIcon correctly. 1`] = `
<Styled(Component)
  to="#"
>
  <Component />
</Styled(Component)>
`;

exports[`Elements Sidebar renders a sub SidebarLink correctly. 1`] = `
<Styled(Component)
  small={true}
  to="#"
>
  Test
</Styled(Component)>
`;

exports[`Elements Sidebar renders an active SidebarLink correctly. 1`] = `
<Styled(Component)
  active={true}
  to="#"
>
  Test
</Styled(Component)>
`;

exports[`Elements Sidebar renders an active SidebarLinkIcon correctly. 1`] = `
<Styled(Component)
  active={true}
  to="#"
>
  <Component />
</Styled(Component)>
`;

exports[`Elements Sidebar renders an active sub SidebarLink correctly. 1`] = `
<Styled(Component)
  active={true}
  small={true}
  to="#"
>
  Test
</Styled(Component)>
`;
